Revert "Rolling back to fix weird npm issues"
This reverts commit 182e756a1982073b0952d521bdefa22469cfa79f.

--- a/package.json
+++ b/package.json
@@ -224,28 +224,28 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "1.8.5",
-    "@mongodb-js/compass-auth-kerberos": "1.0.1",
-    "@mongodb-js/compass-auth-ldap": "1.0.1",
-    "@mongodb-js/compass-auth-x509": "1.0.1",
-    "@mongodb-js/compass-auto-updates": "0.0.3",
-    "@mongodb-js/compass-collection-stats": "3.0.2",
-    "@mongodb-js/compass-connect": "3.4.3",
-    "@mongodb-js/compass-crud": "5.3.8",
-    "@mongodb-js/compass-deployment-awareness": "6.1.2",
-    "@mongodb-js/compass-document-validation": "8.0.3",
-    "@mongodb-js/compass-export-to-language": "2.3.3",
-    "@mongodb-js/compass-find-in-page": "1.0.2",
-    "@mongodb-js/compass-import-export": "1.0.5",
-    "@mongodb-js/compass-instance": "1.0.3",
-    "@mongodb-js/compass-license": "1.0.1",
-    "@mongodb-js/compass-plugin-info": "1.0.1",
-    "@mongodb-js/compass-query-bar": "1.0.31",
-    "@mongodb-js/compass-query-history": "3.0.2",
-    "@mongodb-js/compass-server-version": "2.0.2",
-    "@mongodb-js/compass-serverstats": "12.1.0",
-    "@mongodb-js/compass-ssh-tunnel-status": "2.0.1",
-    "@mongodb-js/compass-status": "3.0.3",
+    "@mongodb-js/compass-aggregations": "^1.9.0",
+    "@mongodb-js/compass-auth-kerberos": "^1.1.1",
+    "@mongodb-js/compass-auth-ldap": "^1.1.0",
+    "@mongodb-js/compass-auth-x509": "^1.1.0",
+    "@mongodb-js/compass-auto-updates": "^0.1.0",
+    "@mongodb-js/compass-collection-stats": "^3.1.0",
+    "@mongodb-js/compass-connect": "^3.7.0",
+    "@mongodb-js/compass-crud": "^5.6.1",
+    "@mongodb-js/compass-deployment-awareness": "^6.3.0",
+    "@mongodb-js/compass-document-validation": "^8.1.0",
+    "@mongodb-js/compass-export-to-language": "^2.5.0",
+    "@mongodb-js/compass-find-in-page": "^1.1.0",
+    "@mongodb-js/compass-import-export": "^1.1.0",
+    "@mongodb-js/compass-instance": "^1.1.0",
+    "@mongodb-js/compass-license": "^1.1.0",
+    "@mongodb-js/compass-plugin-info": "^1.1.0",
+    "@mongodb-js/compass-query-bar": "^1.1.0",
+    "@mongodb-js/compass-query-history": "^3.1.0",
+    "@mongodb-js/compass-server-version": "^2.1.0",
+    "@mongodb-js/compass-serverstats": "^12.2.0",
+    "@mongodb-js/compass-ssh-tunnel-status": "^2.1.0",
+    "@mongodb-js/compass-status": "^3.1.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
