COMPASS-3116: Fix nix npmrc not overriding registry

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -91,7 +91,7 @@ functions:
           . ~/compass_env.sh
 
           echo "Configuring npm..."
-          cat <<EOT > .npmrc
+          cat <<EOT >> .npmrc
           devdir=$NPM_CACHE_DIR/.node-gyp
           init-module=$NPM_CACHE_DIR/.npm-init.js
           cache=$NPM_CACHE_DIR
