--- a/package.json
+++ b/package.json
@@ -198,7 +198,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "electron-rebuild",
+    "postinstall": "electron-rebuild --only kerberos,keytar",
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
     "pretest": "cross-env DEBUG=* mongodb-runner start --port 27017",
