--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "prerelease": "electron-rebuild -o kerberos,keytar",
+    "postinstall": "electron-rebuild -o kerberos,keytar",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
@@ -230,7 +230,7 @@
     "@mongodb-js/compass-auth-x509": "^1.1.0",
     "@mongodb-js/compass-auto-updates": "^0.1.0",
     "@mongodb-js/compass-collection-stats": "^3.1.0",
-    "@mongodb-js/compass-connect": "^3.7.1",
+    "@mongodb-js/compass-connect": "^3.7.2",
     "@mongodb-js/compass-crud": "^5.6.1",
     "@mongodb-js/compass-deployment-awareness": "^6.3.0",
     "@mongodb-js/compass-document-validation": "^8.1.0",
@@ -297,7 +297,7 @@
     "mongodb-collection-model": "^1.0.0",
     "mongodb-connection-model": "^12.5.1",
     "mongodb-core": "^3.1.8",
-    "mongodb-data-service": "^12.4.1",
+    "mongodb-data-service": "^12.4.2",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
