--- a/package.json
+++ b/package.json
@@ -202,7 +202,7 @@
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
     "pretest": "cross-env DEBUG=* mongodb-runner start --port 27017",
-    "test": "xvfb-maybe hadron-build test",
+    "test": "hadron-build test",
     "posttest": "cross-env DEBUG=* mongodb-runner stop --port 27017",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
@@ -355,7 +355,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^20.0.1",
+    "hadron-build": "mongodb-js/hadron-build#evergreen",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
