Upgrade keytar to 4.3.0
They've switched mainline to `libsecret` (was gnome-keyring specific before). Adding `libsecret` support is why I forked originally so that fork can just go away now.

Mainline `keytar` now also supports prebuilds for `electron@3`

cc @durran

--- a/package.json
+++ b/package.json
@@ -257,6 +257,7 @@
     "app-migrations": "mongodb-js/app-migrations#v0.1.2",
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
+    "clean-stack": "^2.0.0",
     "d3": "3.5.17",
     "d3-flextree": "1.0.3",
     "d3-timer": "1.0.7",
@@ -264,6 +265,7 @@
     "debug-menu": "^0.3.0",
     "detect-coordinates": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "ensure-error": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
     "hadron-app": "^3.0.1",
@@ -281,7 +283,7 @@
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
     "kerberos": "^1.1.2",
-    "keytar": "mongodb-js/node-keytar#fdef09013f576b7a257ad768939e827882bccef5",
+    "keytar": "^4.3.0",
     "less": "^2.6.1",
     "less-cache": "^0.23.0",
     "local-links": "^1.4.0",
@@ -355,7 +357,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "mongodb-js/hadron-build#evergreen",
+    "hadron-build": "github:mongodb-js/hadron-build#evergreen",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
