--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -646,7 +646,7 @@ buildvariants:
       - name: verify
       # - name: test-data-service
       # - name: test-functional
-      - name: test-hadron-spectron
+      # - name: test-hadron-spectron
       # - name: test-connect-plugin
       # - name: test-aggregation-builder-plugin
       # NOTE (@imlucas) See above for activating more tests
