COMPASS-3113: Rewrite evergreen integration (#1569)
* COMPASS-3113: Checkpoint

* Fix bad yaml

* checkpoint

* checkpoint

* checkpoint

* checkpoint

* checkpoint

* now have 5 boxes

* Fix compass_env path

* fix tar filename

* update notes

* :tada: Hadron-build can now be cleaved from the rest of the build process

* COMPASS-3113: Refactor complete

* Fixing windows, document how to extend tests in the future

* Cleaning up warnings

* Fix bash error

* Checkpoint waiting to verify Ubuntu e2e

* Install xvfb because they're not on Linux distros by default

* Fixing generated script paths

* Debugging xvfb

* Checking in bash scripts instead of inlining

* Pre dinner checkpoint

* fix path

* Fix distribution expansion not being applied

* MacOS cannot currently be paralelized

*But*, this will still be faster than before as we're only `npm install`-ing 1 time instead of 4.

* Need to stop xvfb after tests run or job will just keep going

* Now that ubuntu working, on to RHEL

* Debugging RHEL

* Checkpoint

* Try `set -o allexport` to figure out why PATH mods getting dropped

* set -o allexport everything

* Use xvfb maybe for all tests

* Need to source for osx signing

* Missed a set -o allexport

* Debugging macOS

* Debugging

* debugging env

* Checkpoint

almost all working...

* Locking in macOS as complete.

Func tests, builds, and package/publish all working. Now faster than master which is just doing builds/package/publish and *not* tests.

* Fix include compass_env.sh in build bundle

* Missed an explicit set shell: bash

* Add more notes and cleanup evergreen config

* COMPASS-3115: Fix windows functional tests

Upgrade to `hadron-spectron@5`. See mongodb-js/hadron-spectron#3 for more details.

* COMPASS-3116: Trying to figure out how to make `xfvb` run on RHEL

* Refresh package-lock

* Update hadron-spectron to beta.2 to debug travis

* COMPASS-311

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: false
 dist: trusty
 language: node_js
 node_js:
-  - 8.9.3
+  - 10.2.1
 env:
   matrix:
-    - MONGODB_VERSION=3.4.x MONGODB_TOPOLOGY=standalone
+    - MONGODB_VERSION=stable MONGODB_TOPOLOGY=standalone
   global:
     secure: kx+3p/x5hEju6fKYzb0SCk9VJLq6bOxrizCQ/skvRB9OwiQUFm68KHDRys6DonUgudfJK9QF+2IvTPo7V+6bzh15hNDd4TnMuz/L9Fcb7+BwTENwjRKlWltuWBtLbJ+XxOeCAg2uWT7D8bH5S2NADIboIVUstAqNM9LKw9V9BVc=
 addons:
@@ -18,7 +18,7 @@ addons:
       - libstdc++6
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
-  - npm i -g npm
+  - npm i -g npm@latest
 install:
   - npm ci
 before_script:
@@ -28,6 +28,11 @@ before_script:
 script:
   - npm run check
   - npm test
+# after_failure:
+#   - curl -sL https://raw.githubusercontent.com/travis-ci/artifacts/master/install | bash
+#   - export ARTIFACTS_PATHS="$HOME/.npm/_logs/*.log"
+#   - artifacts upload
+
 cache:
   directories:
     - '$HOME/.npm'
