--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "MongoDB Compass",
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
-  "version": "1.18.0-dev",
+  "version": "1.17.0-dev",
   "apiVersion": "2.0.0",
   "main": "src/main.js",
   "author": {
@@ -198,15 +198,15 @@
     ]
   },
   "scripts": {
+    "postinstall": "electron-rebuild --only kerberos,keytar",
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
-    "pretest": "mongodb-runner start --port 27017",
+    "pretest": "cross-env DEBUG=* mongodb-runner start --port 27017",
     "test": "hadron-build test",
-    "posttest": "mongodb-runner stop --port 27017",
+    "posttest": "cross-env DEBUG=* mongodb-runner stop --port 27017",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "postinstall": "electron-rebuild -o kerberos,keytar",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
@@ -224,23 +224,23 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^2.2.2",
-    "@mongodb-js/compass-auth-kerberos": "^1.2.0",
-    "@mongodb-js/compass-auth-ldap": "^1.2.0",
-    "@mongodb-js/compass-auth-x509": "^1.2.0",
-    "@mongodb-js/compass-auto-updates": "^0.2.0",
-    "@mongodb-js/compass-collection-stats": "^3.2.0",
-    "@mongodb-js/compass-connect": "^3.8.0",
-    "@mongodb-js/compass-crud": "^6.1.2",
-    "@mongodb-js/compass-deployment-awareness": "^6.4.0",
-    "@mongodb-js/compass-document-validation": "^8.2.0",
+    "@mongodb-js/compass-aggregations": "^1.9.0",
+    "@mongodb-js/compass-auth-kerberos": "^1.1.1",
+    "@mongodb-js/compass-auth-ldap": "^1.1.0",
+    "@mongodb-js/compass-auth-x509": "^1.1.0",
+    "@mongodb-js/compass-auto-updates": "^0.1.0",
+    "@mongodb-js/compass-collection-stats": "^3.1.0",
+    "@mongodb-js/compass-connect": "^3.7.0",
+    "@mongodb-js/compass-crud": "^5.6.1",
+    "@mongodb-js/compass-deployment-awareness": "^6.3.0",
+    "@mongodb-js/compass-document-validation": "^8.1.0",
     "@mongodb-js/compass-export-to-language": "^2.5.0",
     "@mongodb-js/compass-find-in-page": "^1.1.0",
     "@mongodb-js/compass-import-export": "^1.1.0",
     "@mongodb-js/compass-instance": "^1.1.0",
     "@mongodb-js/compass-license": "^1.1.0",
     "@mongodb-js/compass-plugin-info": "^1.1.0",
-    "@mongodb-js/compass-query-bar": "^2.0.0",
+    "@mongodb-js/compass-query-bar": "^1.1.0",
     "@mongodb-js/compass-query-history": "^3.1.0",
     "@mongodb-js/compass-server-version": "^2.1.0",
     "@mongodb-js/compass-serverstats": "^12.2.0",
@@ -257,6 +257,7 @@
     "app-migrations": "mongodb-js/app-migrations#v0.1.2",
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
+    "clean-stack": "^2.0.0",
     "d3": "3.5.17",
     "d3-flextree": "1.0.3",
     "d3-timer": "1.0.7",
@@ -264,24 +265,25 @@
     "debug-menu": "^0.3.0",
     "detect-coordinates": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "ensure-error": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^3.1.0",
+    "hadron-app": "^3.0.1",
     "hadron-app-registry": "^7.1.0",
     "hadron-auto-update-manager": "^2.0.0",
     "hadron-compile-cache": "^1.0.1",
-    "hadron-document": "^5.0.4",
+    "hadron-document": "^4.0.0",
     "hadron-ipc": "^1.1.0",
     "hadron-module-cache": "^0.0.3",
     "hadron-plugin-manager": "^5.3.0",
-    "hadron-react-bson": "^3.0.1",
+    "hadron-react-bson": "^3.0.0",
     "hadron-react-buttons": "^3.0.0",
     "hadron-react-components": "^3.0.0",
     "hadron-style-manager": "^0.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
     "kerberos": "^1.1.2",
-    "keytar": "mongodb-js/node-keytar#fdef09013f576b7a257ad768939e827882bccef5",
+    "keytar": "^4.3.0",
     "less": "^2.6.1",
     "less-cache": "^0.23.0",
     "local-links": "^1.4.0",
@@ -295,9 +297,9 @@
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^1.0.0",
-    "mongodb-connection-model": "^12.5.1",
+    "mongodb-connection-model": "^12.5.0",
     "mongodb-core": "^3.1.8",
-    "mongodb-data-service": "^12.4.3",
+    "mongodb-data-service": "^12.4.0",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
@@ -319,11 +321,11 @@
     "prop-types": "^15.5.8",
     "qs": "^5.2.0",
     "raf": "^3.1.0",
-    "react": "^16.6.0",
+    "react": "^16.5.2",
     "react-ace": "^6.1.1",
     "react-bootstrap": "^0.32.1",
     "react-click-outside": "^2.2.0",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.5.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-select-plus": "^1.2.0",
@@ -347,21 +349,22 @@
     "chai-as-promised": "^7.1.0",
     "chai-enzyme": "1.0.0-beta.0",
     "cheerio": "^1.0.0-rc.2",
+    "cross-env": "^5.2.0",
     "devtron": "^1.4.0",
-    "electron": "2.0.7",
+    "electron": "3.0.6",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^19.3.0",
-    "hadron-spectron": "^1.1.0",
+    "hadron-build": "github:mongodb-js/hadron-build#evergreen",
+    "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
     "mocha": "^4.1.0",
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.3.0",
-    "mongodb-runner": "^4.6.0",
+    "mongodb-runner": "^4.7.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "xvfb-maybe": "^0.1.3"
@@ -370,8 +373,8 @@
     "check"
   ],
   "engines": {
-    "node": "^8.9.3",
-    "npm": ">=5.0.0"
+    "node": "^10.2.1",
+    "npm": ">=6.0.0"
   },
   "bugs": {
     "url": "https://docs.mongodb.com/compass/current/#contact",
