Making evergreen Ubuntu work on electron@3
https://evergreen.mongodb.com/version/5c0944aee3c33128b6a563c8

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -180,6 +180,8 @@ functions:
           source ~/compass_env.sh
           echo "Running tests for compass suite ${test_suite}..."
 
+          bash .evergreen/pretest.sh
+
           # NOTE (@imlucas) Starting with MongoDB 4.0.4, the Server binaries
           # have dropped support for macOS 10.10 because it is now outside
           # of the supported version range. 
