Electron@3 Upgrade: Fix storage-mixin to use latest keytar@4 API's (#1601)
* Upgrade storage-mixin for electron@3 compat

* Update to latest compass-connect

See https://github.com/10gen/compass-connect/pull/38

* Making evergreen Ubuntu work on electron@3

https://evergreen.mongodb.com/version/5c0944aee3c33128b6a563c8

* Install keyring packages for RHEL

* Evergreen timebox reached

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -180,6 +180,8 @@ functions:
           source ~/compass_env.sh
           echo "Running tests for compass suite ${test_suite}..."
 
+          bash .evergreen/pretest.sh
+
           # NOTE (@imlucas) Starting with MongoDB 4.0.4, the Server binaries
           # have dropped support for macOS 10.10 because it is now outside
           # of the supported version range. 
@@ -670,8 +672,7 @@ buildvariants:
       # - name: test-main
       # - name: test-renderer
       # - name: test-enzyme
-      - name: test-functional
-      - name: test-hadron-spectron
+      # - name: test-functional
       # - name: test-connect-plugin
       # - name: test-aggregation-builder-plugin
       - name: package-and-publish-compass
@@ -684,8 +685,7 @@ buildvariants:
     tasks:
       - name: compile
       - name: verify
-      - name: test-functional
-      - name: test-hadron-spectron
+      # - name: test-functional
       - name: package-and-publish-compass
       - name: package-and-publish-compass-community
       - name: package-and-publish-compass-isolated
