--- a/package.json
+++ b/package.json
@@ -230,7 +230,7 @@
     "@mongodb-js/compass-auth-x509": "^1.2.0",
     "@mongodb-js/compass-auto-updates": "^0.2.0",
     "@mongodb-js/compass-collection-stats": "^3.2.0",
-    "@mongodb-js/compass-connect": "^3.8.3",
+    "@mongodb-js/compass-connect": "3.8.3-rm.1",
     "@mongodb-js/compass-crud": "^6.2.1",
     "@mongodb-js/compass-deployment-awareness": "^6.4.1",
     "@mongodb-js/compass-document-validation": "^8.2.0",
@@ -297,7 +297,7 @@
     "mongodb-collection-model": "^1.0.0",
     "mongodb-connection-model": "^12.5.4",
     "mongodb-core": "^3.1.8",
-    "mongodb-data-service": "^12.4.7",
+    "mongodb-data-service": "^12.4.14",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.1",
