COMPASS-3331: Move Metrics Plugin to External

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-instance",
+            "node_modules/@mongodb-js/compass-metrics",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
@@ -80,6 +81,7 @@
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-license",
+            "node_modules/@mongodb-js/compass-metrics",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-plugin-info",
@@ -112,6 +114,7 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-metrics",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-plugin-info",
@@ -239,6 +242,7 @@
     "@mongodb-js/compass-import-export": "^1.3.0",
     "@mongodb-js/compass-instance": "^1.2.0",
     "@mongodb-js/compass-license": "^1.2.0",
+    "@mongodb-js/compass-metrics": "^0.0.9",
     "@mongodb-js/compass-plugin-info": "^1.2.0",
     "@mongodb-js/compass-query-bar": "^2.0.2",
     "@mongodb-js/compass-query-history": "^3.2.0",
