--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
             "node_modules/@mongodb-js/compass-auto-updates",
             "node_modules/@mongodb-js/compass-export-to-language",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
@@ -77,6 +78,7 @@
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-deployment-awareness",
@@ -105,6 +107,7 @@
             "node_modules/@mongodb-js/compass-auto-updates",
             "node_modules/@mongodb-js/compass-export-to-language",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-collection-stats",
@@ -138,6 +141,7 @@
             "node_modules/@mongodb-js/compass-aggregations",
             "node_modules/@mongodb-js/compass-export-to-language",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-collection-stats",
@@ -235,6 +239,7 @@
     "@mongodb-js/compass-collection-stats": "^3.2.0",
     "@mongodb-js/compass-connect": "^3.8.11",
     "@mongodb-js/compass-crud": "^6.2.3",
+    "@mongodb-js/compass-ddl": "^0.0.2",
     "@mongodb-js/compass-deployment-awareness": "^6.4.1",
     "@mongodb-js/compass-document-validation": "^8.2.0",
     "@mongodb-js/compass-export-to-language": "^2.6.0",
