COMPASS-1100: Remove internal database plugin

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
             "node_modules/@mongodb-js/compass-auto-updates",
             "node_modules/@mongodb-js/compass-export-to-language",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-collection-stats",
@@ -78,6 +79,7 @@
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
@@ -107,6 +109,7 @@
             "node_modules/@mongodb-js/compass-auto-updates",
             "node_modules/@mongodb-js/compass-export-to-language",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
@@ -141,6 +144,7 @@
             "node_modules/@mongodb-js/compass-aggregations",
             "node_modules/@mongodb-js/compass-export-to-language",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-ddl",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
@@ -239,7 +243,8 @@
     "@mongodb-js/compass-collection-stats": "^3.2.0",
     "@mongodb-js/compass-connect": "^3.8.11",
     "@mongodb-js/compass-crud": "^6.2.3",
-    "@mongodb-js/compass-ddl": "^0.0.6",
+    "@mongodb-js/compass-database": "^0.0.3",
+    "@mongodb-js/compass-ddl": "^0.0.9",
     "@mongodb-js/compass-deployment-awareness": "^6.4.1",
     "@mongodb-js/compass-document-validation": "^8.2.0",
     "@mongodb-js/compass-export-to-language": "^2.6.0",
