--- a/package.json
+++ b/package.json
@@ -382,7 +382,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "github:mongodb-js/hadron-build#evergreen",
+    "hadron-build": "^21.0.0",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mocha": "^4.1.0",
