--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "name": "MongoDB Inc",
     "email": "compass@mongodb.com"
   },
+  "shortcutFolderName": "MongoDB",
   "license": "UNLICENSED",
   "private": true,
   "config": {
@@ -382,7 +383,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^21.0.1",
+    "hadron-build": "^21.0.2",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mocha": "^4.1.0",
