--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -635,7 +635,7 @@ buildvariants:
 
   - name: windows
     display_name: Windows
-    run_on: windows-64-vs2017-compile
+    run_on: windows-64-vs2015-test
     expansions:
       compass_distribution: compass
     tasks:
