--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
   "version": "1.18.0-dev",
+  "installerVersion": "1.18.0.0",
   "apiVersion": "2.0.0",
   "main": "src/main.js",
   "author": {
@@ -383,7 +384,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^21.0.2",
+    "hadron-build": "^21.0.3",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mocha": "^4.1.0",
