--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
           "productName": "MongoDB Compass",
           "bundleId": "com.mongodb.compass",
           "plugins-directory": ".mongodb/compass/plugins",
+          "upgradeCode": "0152273d-2f9f-4913-b67f-0fcd3557ffd1",
           "plugins": [
             "node_modules/@mongodb-js/compass-aggregations",
             "node_modules/@mongodb-js/compass-auto-updates",
@@ -76,6 +77,7 @@
           "productName": "MongoDB Compass Community",
           "bundleId": "com.mongodb.compass-community",
           "plugins-directory": ".mongodb/compass-community/plugins",
+          "upgradeCode": "eaf69c0d-a16e-44da-a47f-37745230aaf0",
           "plugins": [
             "node_modules/@mongodb-js/compass-aggregations",
             "node_modules/@mongodb-js/compass-auto-updates",
@@ -109,6 +111,7 @@
           "productName": "MongoDB Compass Readonly",
           "bundleId": "com.mongodb.compass.readonly",
           "plugins-directory": ".mongodb/compass-readonly/plugins",
+          "upgradeCode": "2176ec1d-ef71-49d4-b3b4-9e15b289d79a",
           "readonly": true,
           "plugins": [
             "node_modules/@mongodb-js/compass-aggregations",
@@ -147,6 +150,7 @@
           "productName": "MongoDB Compass Isolated Edition",
           "bundleId": "com.mongodb.compass.isolated",
           "plugins-directory": ".mongodb/compass-isolated/plugins",
+          "upgradeCode": "516f2be1-4417-4f31-baa1-364a59404775",
           "isolated": true,
           "plugins": [
             "node_modules/@mongodb-js/compass-aggregations",
@@ -384,7 +388,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^21.0.3",
+    "hadron-build": "^21.0.4",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mocha": "^4.1.0",
