--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
-            "node_modules/@mongodb-js/compass-status"
+            "node_modules/@mongodb-js/compass-status",
+            "node_modules/@mongodb-js/compass-indexes"
           ],
           "styles": [
             "index"
@@ -100,7 +101,8 @@
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
-            "node_modules/@mongodb-js/compass-status"
+            "node_modules/@mongodb-js/compass-status",
+            "node_modules/@mongodb-js/compass-indexes"
           ],
           "styles": [
             "index"
@@ -139,7 +141,8 @@
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
-            "node_modules/@mongodb-js/compass-status"
+            "node_modules/@mongodb-js/compass-status",
+            "node_modules/@mongodb-js/compass-indexes"
           ],
           "styles": [
             "index"
@@ -176,7 +179,8 @@
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
-            "node_modules/@mongodb-js/compass-status"
+            "node_modules/@mongodb-js/compass-status",
+            "node_modules/@mongodb-js/compass-indexes"
           ],
           "styles": [
             "index"
@@ -256,6 +260,7 @@
     "@mongodb-js/compass-auto-updates": "^0.2.0",
     "@mongodb-js/compass-collection": "^0.0.2",
     "@mongodb-js/compass-collections-ddl": "^0.0.20",
+    "@mongodb-js/compass-indexes": "^0.0.3",
     "@mongodb-js/compass-collection-stats": "^3.2.0",
     "@mongodb-js/compass-connect": "^3.8.11",
     "@mongodb-js/compass-crud": "^6.2.3",
