Use our signtool

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -266,7 +266,9 @@ functions:
                 -o "signtool.exe" \
                 --url "https://s3.amazonaws.com/boxes.10gen.com/build/signtool.exe"
               rm -f node_modules/electron-winstaller/vendor/signtool.exe
+              rm -f node_modules/@mongodb-js/electron-wix-msi/vendor/signtool.exe
               chmod +x signtool.exe
+              cp signtool.exe node_modules/@mongodb-js/electron-wix-msi/vendor/signtool.exe
             fi
             bash ~/compass_package.sh
           fi
