--- a/package.json
+++ b/package.json
@@ -339,7 +339,7 @@
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
     "mongodb-query-parser": "^1.0.1",
-    "mongodb-query-util": "0.0.1",
+    "mongodb-query-util": "^0.0.2",
     "mongodb-schema": "^8.2.2",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
