--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
-            "node_modules/@mongodb-js/compass-indexes"
+            "node_modules/@mongodb-js/compass-indexes",
+            "node_modules/@mongodb-js/compass-instance-header"
           ],
           "styles": [
             "index"
@@ -102,7 +103,8 @@
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
-            "node_modules/@mongodb-js/compass-indexes"
+            "node_modules/@mongodb-js/compass-indexes",
+            "node_modules/@mongodb-js/compass-instance-header"
           ],
           "styles": [
             "index"
@@ -142,7 +144,8 @@
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
-            "node_modules/@mongodb-js/compass-indexes"
+            "node_modules/@mongodb-js/compass-indexes",
+            "node_modules/@mongodb-js/compass-instance-header"
           ],
           "styles": [
             "index"
@@ -180,7 +183,8 @@
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
-            "node_modules/@mongodb-js/compass-indexes"
+            "node_modules/@mongodb-js/compass-indexes",
+            "node_modules/@mongodb-js/compass-instance-header"
           ],
           "styles": [
             "index"
@@ -272,6 +276,7 @@
     "@mongodb-js/compass-find-in-page": "^1.2.0",
     "@mongodb-js/compass-import-export": "^1.3.0",
     "@mongodb-js/compass-instance": "^1.2.0",
+    "@mongodb-js/compass-instance-header": "^0.0.3",
     "@mongodb-js/compass-license": "^1.2.0",
     "@mongodb-js/compass-metrics": "^0.0.12",
     "@mongodb-js/compass-plugin-info": "^1.2.0",
