--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
             "node_modules/@mongodb-js/compass-indexes",
@@ -101,6 +102,7 @@
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
             "node_modules/@mongodb-js/compass-indexes",
@@ -142,6 +144,7 @@
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
             "node_modules/@mongodb-js/compass-indexes",
@@ -181,6 +184,7 @@
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
             "node_modules/@mongodb-js/compass-indexes",
@@ -286,6 +290,7 @@
     "@mongodb-js/compass-schema-validation": "^1.0.7",
     "@mongodb-js/compass-server-version": "^2.2.0",
     "@mongodb-js/compass-serverstats": "^12.3.0",
+    "@mongodb-js/compass-sidebar": "^0.0.4",
     "@mongodb-js/compass-ssh-tunnel-status": "^2.2.0",
     "@mongodb-js/compass-status": "^3.2.0",
     "ampersand-collection": "^1.5.0",
